--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,3 +1,14 @@
-body {
-    background: green;
-}
+
+@import "../../node_modules/fontawesome-free/css/all.min";
+@import "../../node_modules/normalize.scss/normalize";
+
+@import "global/fonts";
+@import "global/vars";
+@import "global/base";
+@import "global/common";
+@import "global/sprite";
+@import "global/button";
+
+
+@import "sections/header";
+@import "sections/nav";
