Mixin for section title was added (home work for lesson-6)

--- a/source/template/sections/work.pug
+++ b/source/template/sections/work.pug
@@ -1,8 +1,6 @@
 section.work
   .container
-    .title.title--with-bottom-line
-      h2.title.title__header Our Work
-      .title__text We are added on featured works below
+    +section_title("Our Work", "We are added on featured works below")
 
     ul.work__list
       li.work__item.work__item--name
