--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -7,6 +7,7 @@ html(lang='ru')
     link(rel="stylesheet" href="css/main.min.css")
     title Business
   body
+    include global/mixins
     include sections/header
     include sections/hero
     include sections/about
