--- a/source/template/sections/about.pug
+++ b/source/template/sections/about.pug
@@ -1,8 +1,7 @@
 section.about
   .container
-    .title.title--with-bottom-line
-      h2.title.title__header About Us
-      .title__text We are added our major Services
+
+    +section_title("About Us","We are added our major Services")
 
     ul.about__list
       li.about__item
