--- a/source/template/sections/approach.pug
+++ b/source/template/sections/approach.pug
@@ -1,8 +1,6 @@
 section.approach
   .container
-    .title.title--with-bottom-line
-      h2.title.title__header Our Approch
-      .title__text Check Our approches step by step ( how we do it )
+    +section_title("Our Approch", "We are added our major Services")
     ul.approach__list
       li.approach__item
         .approach__image
