mobile version was added

--- a/source/styles/sections/approach.scss
+++ b/source/styles/sections/approach.scss
@@ -2,6 +2,11 @@
   padding: 86px 0 94px;
   background-color: #f3f3f3;
 
+  @media (max-width: 985px) {
+    padding-top: 20px;
+    padding-bottom: 1px;
+  }
+
   &__list {
     margin: 0;
     padding: 0;
@@ -15,13 +20,25 @@
     color: #424242;
     background: #fff;
 
+    @media (max-width: 700px) {
+      padding-top: 35px;
+    }
+
     &:nth-child(2n) {
       display: flex;
       flex-direction: row-reverse;
       text-align: right;
 
+      @media (max-width: 700px) {
+        display: block;
+      }
+
       .approach__text {
-        padding: 70px 90px;
+        padding: 70px 90px 0 0;
+
+        @media (max-width: 985px) {
+          padding: 25px 20px;
+        }
       }
 
       .approach__step {
@@ -37,6 +54,16 @@
     max-height: 236px;
     display: inline-block;
     vertical-align: top;
+
+    @media (max-width: 985px) {
+      max-width: calc(340px / 1.46);
+      max-height: calc(236px / 1.46);
+    }
+
+    @media (max-width: 700px) {
+      margin: auto;
+      display: block;
+    }
   }
 
   &__picture {
@@ -49,16 +76,26 @@
     display: inline-block;
     vertical-align: top;
     width: 64%;
-    padding: 70px 70px 55px 90px;
+    // padding: 70px 70px 55px 90px;
+    padding: 70px 20px 55px 90px;
     font-size: 0.875rem;
+
+    @media (max-width: 985px) {
+      padding: 25px 20px;
+    }
+
+    @media (max-width: 700px) {
+      width: 100%;
+      text-align: center;
+    }    
   }
 
   &__step {
     @include centerer-y();
-    right: -58px;
+    right: -53px;
     width: 103px;
     height: 103px;
-    padding-top: 10px;
+    padding-top: 4px;
     border-radius: 5px;
     border: 2px solid #fff;
     text-align: center;
@@ -66,7 +103,7 @@
     background-color: #de2b24;
     color: #fff;
 
-    &::before {
+    &:before {
       content: counter(count);
       counter-increment: count;
       display: block;
@@ -74,6 +111,10 @@
       font-size: 3rem;
       line-height: 1;
       color: #fff;
+    }
+
+    @media (max-width: 985px) {
+      display: none;
     }
   }
 
@@ -86,6 +127,14 @@
   &__description {
     margin: 0;
     line-height: 1.5;
+  }
+
+  .title {
+    margin-bottom: 61px;
+
+    @media (max-width: 985px) {
+      margin-bottom: 35px;
+    }
   }
 
 }
