--- a/source/template/sections/approach.pug
+++ b/source/template/sections/approach.pug
@@ -1,6 +1,6 @@
 section.approach
   .container
-    +section_title("Our Approch", "We are added our major Services")
+    +section_title("Our Approch", "Check Our Approaches step by step ( how we do it )")
     ul.approach__list
       li.approach__item
         .approach__image
