--- a/source/styles/global/button.scss
+++ b/source/styles/global/button.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   border-radius: 3px;
   padding: 10px 22px 7px;
+  //padding: 10px 30px 7px 25px;
   text-decoration: none;
   color: #fff;
 
