--- a/source/styles/sections/form.scss
+++ b/source/styles/sections/form.scss
@@ -1,10 +1,14 @@
 .form-section {
-  padding: 100px 0 110px 0;
+  padding: 96px 0 110px 0;
   color: #fff;
   background-color: #1287bf;
 
+  @media (max-width: 810px) {
+    padding: 50px 0 55px 0;
+  }
+
   .title {
-    margin-bottom: 12px;
+    margin-bottom: 13px;
 
     &--with-bottom-line:after {
       display: none;
@@ -21,7 +25,7 @@
 
   .btn-down {
     position: relative;
-    margin: auto auto 20px;
+    margin: auto auto 21px;
     width: 65px;
     height: 65px;
     border: 2px solid #fff;
@@ -43,11 +47,16 @@
   position: relative;
   width: 67%;
   margin: auto;
-  padding: 50px 50px 66px 50px;
+  padding: 48px 50px 66px 50px;
   border-radius: 3px;
   color: #828282;
   text-align: center;
   background-color: #fff;
+
+  @media (max-width: 910px) {
+    width: 90%;
+    padding: 25px;
+  }
 
   &-container {
     padding-top: 30px;
@@ -88,14 +97,14 @@
   }
 
   &__fields {
-    padding-bottom: 36px;
+    padding-bottom: 28px;
   }
 
   &__input {
     width: 76%;
     display: block;
     margin: auto auto 8px auto;
-    padding: 18px 20px;
+    padding: 17px 20px;
     border: 1px solid #d8d8d8;
     border-radius: 3px;
     font-size: 0.875rem;
