--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -9,12 +9,25 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding: 41px 0 32px;
+    //padding: 41px 0 32px;
+    padding: 41px 0 35px;
+
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
+
+    .button {
+      @media (max-width: 1080px) {
+        margin-right: 15px;
+      }
+    }
   }
 }
 
 .contacts {
   text-align: right;
+  // padding-top: 2px;
+
 }
 
 .contact {
@@ -36,7 +49,7 @@
 
   &__icon {
     margin-right: 7px;
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
     vertical-align: middle;
 
     &--email {
@@ -53,4 +66,15 @@
   border-radius: 3px;
   color: #fff;
   background-color: #1287bf;
+}
+
+.logo {
+  @media (max-width: 1080px) {
+    margin-left: 15px;
+  }
+
+  @media (max-width: 1000px) {
+    margin-left: 0;
+    margin-bottom: 15px;
+  }
 }
