--- a/source/styles/sections/nav.scss
+++ b/source/styles/sections/nav.scss
@@ -1,8 +1,11 @@
 .nav {
   display: inline-block;
-  padding-top: 7px;
   vertical-align: top;
-  margin-right: 15px;
+  margin-left: 165px;
+
+  @media (max-width: 1030px) {
+    margin-left: 0;
+  }
 
   &__link {
     display: inline-block;
@@ -13,6 +16,7 @@
     text-transform: capitalize;
     color: #424242;
     transition: 0.3s;
+    font-size: 0.9rem;
 
     &:hover,
     &--active {
@@ -32,6 +36,15 @@
 
     &:last-child:after {
       display: none;
+    }
+
+    @media (max-width: 530px) {
+      display: block;
+      text-align: center;
+      
+      &:after {
+        display: none;
+      }
     }
   }
 }
