--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -1,5 +1,6 @@
 .title {
-  margin-bottom: 65px;
+  // margin-bottom: 65px;
+  margin-bottom: 63px;
   text-align: center;
 
   &__header {
@@ -7,11 +8,13 @@
     font-size: 2.25rem;
     font-family: $ff-main-bold;
     line-height: 1;
+    padding-bottom: 2px;
   }
 
   &__text {
     font-size: 1.25rem;
     font-family: $ff-main-light;
+    //padding-top: 2px;
   }
 
   &--with-bottom-line {
