--- a/source/template/global/mixins.pug
+++ b/source/template/global/mixins.pug
@@ -1,4 +1,4 @@
 mixin section_title($title_header,$title_text)
   .title.title--with-bottom-line
-    h2.title.title__header=$title_header
+    h2.title__header=$title_header
     .title__text=$title_text
