--- a/source/template/sections/about.pug
+++ b/source/template/sections/about.pug
@@ -7,15 +7,15 @@ section.about
       li.about__item
         .icon.icon-like
         h3.about__header Facebook Marketing
-        p.about__description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum debitis accusantium ex fugit sint dolorum suscipit, animi cum reprehenderit esse tempore laudantium cumque voluptas ad, atque at harum, illo velit!
+        p.about__description Lorem Ipsum is simply dummy text of the printing and typesetting industry.  standard dummy text ever
 
       li.about__item
         .icon.icon-book
         h3.about__header Landing pages Creation
-        p.about__description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum debitis accusantium ex fugit sint dolorum suscipit, animi cum reprehenderit esse tempore laudantium cumque voluptas ad, atque at harum, illo velit!
+        p.about__description Lorem Ipsum is simply dummy text of the printing and typesetting industry.  standard dummy text ever
 
       li.about__item
         .icon.icon-message
         h3.about__header Ads management
-        p.about__description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum debitis accusantium ex fugit sint dolorum suscipit, animi cum reprehenderit esse tempore laudantium cumque voluptas ad, atque at harum, illo velit!
+        p.about__description Lorem Ipsum is simply dummy text of the printing and typesetting industry.  standard dummy text ever
   
