--- a/source/template/sections/nav.pug
+++ b/source/template/sections/nav.pug
@@ -1,7 +1,8 @@
 nav.nav
   - var items = ['Home', 'About Us', 'Our Approch', 'Our Work']
-    each item,index in items
+  - var dataItems=['header', 'about', 'approach', 'work']
+    each item, index in items
       if index === 0
-        a.nav__link.nav__link--active(href="#")= item
+        a.nav__link.nav__link--active(href="#" data-link=dataItems[index])= item
       else
-        a.nav__link(href="#")= item
+        a.nav__link(href="#" data-link=dataItems[index])= item
